[gd_scene load_steps=7 format=3 uid="uid://cojbeucbl35kq"]

[ext_resource type="Texture2D" uid="uid://dlsll5nl1os4c" path="res://assets/spirites/textures/Przeciwnik spritesheet.png" id="1_hfiq4"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_v2ib5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lpwkf"]
atlas = ExtResource("1_hfiq4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3uev"]
atlas = ExtResource("1_hfiq4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3tg2y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpwkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3uev")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h050i"]
radius = 15.0333

[node name="enemy" type="Node2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_v2ib5")

[node name="Area2D" type="Area2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
sprite_frames = SubResource("SpriteFrames_3tg2y")
autoplay = "default"
frame_progress = 0.36658
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_h050i")

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 1.5
one_shot = true

[node name="RayCastLeft" type="RayCast2D" parent="Area2D"]
target_position = Vector2(-16.25, 0)

[node name="RayCastRight" type="RayCast2D" parent="Area2D"]
target_position = Vector2(16.25, 0)

[node name="RayCastRightDown" type="RayCast2D" parent="Area2D"]
position = Vector2(26.25, 0)
target_position = Vector2(0, 18.75)

[node name="RayCastLeftDown" type="RayCast2D" parent="Area2D"]
position = Vector2(-23.75, 0)
target_position = Vector2(0, 18.75)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_timer_timeout"]
